force-app/main/default/objects/Management_System__c/fields/Recall_Due_Date_Icon__c.field-meta.xml
<CustomField>
    <fullName>Recall_Due_Date_Icon__c</fullName>
    <formula>IF(Recall_Due_Date__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recall Due Date</label>
    <type>Text</type>
</CustomField>