force-app/main/default/objects/Management_System__c/fields/Recare__c.field-meta.xml
<CustomField>
    <fullName>Recare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall (Recare)</label>
    <type>Checkbox</type>
</CustomField>