force-app/main/default/objects/Management_System__c/fields/Recare_Icon__c.field-meta.xml
<CustomField>
    <fullName>Recare_Icon__c</fullName>
    <formula>IF(Recare__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recall (Recare)</label>
    <type>Text</type>
</CustomField>