force-app/main/default/objects/Management_System__c/fields/Recare_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Recare_Supported_Version__c</fullName>
    <label>Recare Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>