force-app/main/default/objects/Management_System__c/fields/Sales_Engineer_Call_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Call_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Engineer Call Needed</label>
    <type>Checkbox</type>
</CustomField>