force-app/main/default/objects/Management_System__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Security Number</label>
    <type>Checkbox</type>
</CustomField>