force-app/main/default/objects/Management_System__c/fields/Social_Security_Number_Icon__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number_Icon__c</fullName>
    <formula>IF(Social_Security_Number__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Security Number</label>
    <type>Text</type>
</CustomField>