force-app/main/default/objects/Management_System__c/fields/SR_Portal__c.field-meta.xml
<CustomField>
    <fullName>SR_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Portal</label>
    <type>Checkbox</type>
</CustomField>