force-app/main/default/objects/Management_System__c/fields/SR_Portal_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>SR_Portal_Support_Version__c</fullName>
    <label>SR Portal Support Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>