force-app/main/default/objects/Management_System__c/fields/Sugar_ID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>