force-app/main/default/objects/Management_System__c/fields/Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Support_Team__c</fullName>
    <label>Support Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>