force-app/main/default/objects/Management_System__c/fields/Supported_Features_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supported_Features_Notes__c</fullName>
    <label>Supported Features Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>