force-app/main/default/objects/Management_System__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Post-Appointment Surveys</label>
    <type>Checkbox</type>
</CustomField>