force-app/main/default/objects/Management_System__c/fields/Survey_Icon__c.field-meta.xml
<CustomField>
    <fullName>Survey_Icon__c</fullName>
    <formula>IF(Survey__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated Post-Appointment Surveys</label>
    <type>Text</type>
</CustomField>