force-app/main/default/objects/Management_System__c/fields/Survey_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Survey_Supported_Version__c</fullName>
    <label>Survey Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>