force-app/main/default/objects/Management_System__c/fields/SYNC_Availability__c.field-meta.xml
<CustomField>
    <fullName>SYNC_Availability__c</fullName>
    <inlineHelpText>Being Built= an integration engineer is currently building this SYNC
Discovery= research is being done if we can integrate 
Cannot Integrate= DO NOT SELL
Business Negotiation= we are looking into making a business agreement
SYNC Complete= Sail Away</inlineHelpText>
    <label>SYNC Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
                <label>Sales Engineer List</label>
            </value>
            <value>
                <fullName>SYNC Complete</fullName>
            </value>
            <value>
                <fullName>Blacklist - DO NOT SELL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>