force-app/main/default/objects/Management_System__c/fields/SYNC_Availability_Icon__c.field-meta.xml
<CustomField>
    <fullName>SYNC_Availability_Icon__c</fullName>
    <formula>CASE(SYNC_Availability__c,
   &quot;In Development&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000006OvDg&quot;,&quot;In Development&quot;),

   &quot;Discovery&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Z000008j1Lw&quot;,&quot;Discovery&quot;),

   &quot;Blacklist - DO NOT SELL&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000006OvDf&quot;,&quot;Blacklist - DO NOT SELL&quot;),

   &quot;SYNC Complete&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000006OvDe&quot;,&quot;SYNC Complete&quot;),

IMAGE(&quot;/servlet/servlet.FileDownload?file= 015i0000006OvDd&quot;,&quot;Unknown&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SYNC Availability Icon</label>
    <type>Text</type>
</CustomField>