force-app/main/default/objects/Management_System__c/fields/Sync_Details__c.field-meta.xml
<CustomField>
    <fullName>Sync_Details__c</fullName>
    <description>Link to Confluence for details on this Sync</description>
    <label>Sync Details (Confluence Link)</label>
    <type>Url</type>
</CustomField>