force-app/main/default/objects/Management_System__c/fields/Sync_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync ID</label>
    <type>Text</type>
</CustomField>