force-app/main/default/objects/Management_System__c/fields/Voice_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Voice_Supported_Version__c</fullName>
    <label>Voice Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>