force-app/main/default/objects/Management_System__c/fields/Write_back_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Write_back_Confirmations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write-back Confirmations</label>
    <type>Checkbox</type>
</CustomField>