force-app/main/default/objects/Management_System__c/fields/Write_back_Confirmations_Icon__c.field-meta.xml
<CustomField>
    <fullName>Write_back_Confirmations_Icon__c</fullName>
    <formula>IF(Write_back_Confirmations__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Write-back Confirmations</label>
    <type>Text</type>
</CustomField>