force-app/main/default/objects/Management_System__c/fields/Write_back_Confirmations_Sup_Version__c.field-meta.xml
<CustomField>
    <fullName>Write_back_Confirmations_Sup_Version__c</fullName>
    <label>Write-back Confirmations Sup. Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>