force-app/main/default/objects/Management_System__c/listViews/All_API_Sync_Feature_Set.listView-meta.xml
<ListView>
    <fullName>All_API_Sync_Feature_Set</fullName>
    <columns>NAME</columns>
    <columns>Sync_Details__c</columns>
    <columns>SYNC_Availability_Icon__c</columns>
    <columns>DB_Type__c</columns>
    <columns>Ledgers_Icon__c</columns>
    <columns>Recare_Icon__c</columns>
    <columns>Voice_Icon__c</columns>
    <columns>Write_back_Confirmations__c</columns>
    <columns>Limelight_Available__c</columns>
    <columns>Locations_Icon__c</columns>
    <columns>Procedure_History_Icon__c</columns>
    <columns>Providers_Icon__c</columns>
    <columns>Appointment_Location_Icon__c</columns>
    <columns>Appointment_Provider__c</columns>
    <columns>Write_back_Confirmations_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Cerner</value>
    </filters>
    <label>All - API Sync Feature Set</label>
</ListView>