force-app/main/default/objects/Management_System__c/listViews/Disc_dev.listView-meta.xml
<ListView>
    <fullName>Disc_dev</fullName>
    <columns>NAME</columns>
    <columns>SYNC_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SYNC_Availability__c</field>
        <operation>equals</operation>
        <value>Discovery,In Development</value>
    </filters>
    <label>Disc, dev</label>
    <sharedTo>
        <group>Support</group>
    </sharedTo>
</ListView>