force-app/main/default/objects/Management_System__c/listViews/Mgmt_Systems_Key_Feature_Shortlist.listView-meta.xml
<ListView>
    <fullName>Mgmt_Systems_Key_Feature_Shortlist</fullName>
    <columns>NAME</columns>
    <columns>Sync_Details__c</columns>
    <columns>SYNC_Availability_Icon__c</columns>
    <columns>SYNC_Availability__c</columns>
    <columns>DB_Type__c</columns>
    <columns>Ledgers_Icon__c</columns>
    <columns>Recare_Icon__c</columns>
    <columns>Voice_Icon__c</columns>
    <columns>Write_back_Confirmations__c</columns>
    <columns>Limelight_Available__c</columns>
    <columns>Procedure_History_Icon__c</columns>
    <columns>Providers_Icon__c</columns>
    <columns>Appointment_Location_Icon__c</columns>
    <columns>Appointment_Provider__c</columns>
    <columns>Write_back_Confirmations_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SYNC_Availability__c</field>
        <operation>equals</operation>
        <value>Discovery,In Development,SYNC Complete</value>
    </filters>
    <label>Mgmt Systems - Key Feature Shortlist</label>
</ListView>