force-app/main/default/objects/Management_System__c/listViews/Mgmt_Systems_Key_Feature_Shortlist1.listView-meta.xml
<ListView>
    <fullName>Mgmt_Systems_Key_Feature_Shortlist1</fullName>
    <columns>NAME</columns>
    <columns>Sync_Details__c</columns>
    <columns>SYNC_Availability__c</columns>
    <columns>DB_Type__c</columns>
    <columns>Business_Relationship__c</columns>
    <columns>Patient_Provider_Icon__c</columns>
    <columns>Appointment_Provider_Icon__c</columns>
    <columns>Appointment_Location_Icon__c</columns>
    <columns>Write_back_Confirmations_Icon__c</columns>
    <columns>Procedure_History_Icon__c</columns>
    <columns>Recare_Icon__c</columns>
    <columns>Voice_Icon__c</columns>
    <columns>Limelight_Icon__c</columns>
    <columns>Ledgers_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Centricity</value>
    </filters>
    <label>Mgmt Systems - Key Feature Shortlist</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>