force-app/main/default/objects/Management_System__c/listViews/PMs_that_support_Limelight.listView-meta.xml
<ListView>
    <fullName>PMs_that_support_Limelight</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Limelight__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PMs that support Limelight</label>
</ListView>