force-app/main/default/objects/Management_System__c/listViews/Sales_Engineer_Needed.listView-meta.xml
<ListView>
    <fullName>Sales_Engineer_Needed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Engineer_Call_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sales Engineer Needed</label>
</ListView>